--- a/minikube/helloworld-service.yml
+++ b/minikube/helloworld-service.yml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: helloworld
+  name: helloworld11
   labels:
-    app: helloworld
-    service: helloworld
-    infra: minikube
+    app: helloworld11
+    service: helloworld11
 spec:
   ports:
   - port: 5000
     name: http
   selector:
-    app: helloworld
+    app: helloworld11
