--- a/minikube/values.yaml
+++ b/minikube/values.yaml
@@ -1,1 +1,13 @@
-replicas: 2
+apiVersion: v1
+kind: Service
+metadata:
+  name: helloworld11
+  labels:
+    app: helloworld11
+    service: helloworld11
+spec:
+  ports:
+  - port: 5000
+    name: http
+  selector:
+    app: helloworld11
