--- a/istio/values.yaml
+++ b/istio/values.yaml
@@ -2,5 +2,5 @@ name: <+pipeline.variables.name>
 namespace: <+infra.namespace>
 # tlscrt: <+pipeline.stages.istiotlssecret.spec.execution.steps.converttobase64.output.outputVariables.tlscertificatecertbase64>
 # tlskey: <+pipeline.stages.istiotlssecret.spec.execution.steps.converttobase64.output.outputVariables.tlscertificatekeybase64>
-tlscrt: <+secrets.getValue("<+pipeline.variables.tlscertificatecert>")>
-tlskey: <+secrets.getValue("<+pipeline.variables.tlscertificatekey>")>
+tlscrt: "<+secrets.getValue("<+pipeline.variables.tlscertificatecert>")>"
+tlskey: "<+secrets.getValue("<+pipeline.variables.tlscertificatekey>")>"
