--- a/istio/istio-tls-cert-credential.yaml
+++ b/istio/istio-tls-cert-credential.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 data:
   tls.crt: |-
-   {{tpl(.Values.tlscrt) . | b64enc | quote}}
+   {{.Values.tlscrt | toYaml | b64enc | quote}}
   tls.key: |-
-   {{tpl(.Values.tlskey) . | b64enc | quote}}
+   {{.Values.tlskey | toYaml | b64enc | quote}}
 kind: Secret
 metadata:
   name: "{{.Values.name}}"
