--- a/istio/istio-tls-cert-credential.yaml
+++ b/istio/istio-tls-cert-credential.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 data:
   tls.crt: |-
-   {{.Values.tlscrt | toYaml | b64enc | quote}}
+   {{quote .Values.tlscrt | toYaml | b64enc }}
   tls.key: |-
-   {{.Values.tlskey | toYaml | b64enc | quote}}
+   {{quote .Values.tlskey | toYaml | b64enc }}
 kind: Secret
 metadata:
   name: "{{.Values.name}}"
