--- a/istio/istio-tls-cert-credential.yaml
+++ b/istio/istio-tls-cert-credential.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  tls.crt: {{.Values.tlscrt | b64enc | quote}}
-  tls.key: {{.Values.tlskey | b64enc | quote}}
+  tls.crt: {{ "{{.Values.tlscrt}}" | b64enc }}
+  tls.key: {{ "{{.Values.tlskey}}" | b64enc }}
 kind: Secret
 metadata:
   name: "{{.Values.name}}"
